frontend/src/components/Navigation/Navigation.css
.hidden {
    display:none;
}

.navBar{
display: grid;
border-top: 1px solid grey;
border-bottom: 1px solid gray;
grid-template-areas : "logo createSpot . login";
justify-content: start;
padding: 1%;
margin: 0%;
}



.logoText {
    margin-top:.4em ;
    display: inline-block;
    color: #FF385C;
}







.container {
    margin: 0%;
    padding: 0%;
    display: grid;
}

.navBar li {
    display: grid;

}
html, body {

    margin: 0;
}


.menuButton {
    /* border: 2px solid blue; */
display: grid;
width: 6.5em;
height: 3.3em;
grid-area: login;
border: 0px;
background-color: white;
align-content: center;


}

.fa-house-crack {
    color: #FF385C;
}



.menuButton button {
    border:1px solid gray;

    /* border: 5px solid green; */
    border-radius: 25px;
right:5%;
top: 3%;
position: absolute;

}

.menuButton button:hover {

    box-shadow: 1px 1px grey;
}

.fa-user-circle {
    justify-content: space-around;
    display: grid;
    justify-content: right;
margin-bottom: 10%;
color:grey;
padding-right: 3%;

}
.fa-bars {
        display: grid;
        justify-content: left;
        padding-left: 10%;
    margin-top: 15%;
    color:grey;


}

.menuButtonOpen li {
    padding: 10%;
    border-bottom: 1px solid gray;
    font-weight: bold;
}
.menuButtonOpen{
position: absolute;
top: 9%;
right: 2%;
border: 1px solid gray;
overflow: hidden;
padding: 1%;
border-radius: 25px;
width: 13em;
height: 14em;
background-color: white;
}


.createSpotButton:link, .createSpotButton:active, .createSpotButton:hover  { text-decoration: none; }

.createSpotButton {
    display: grid;
    grid-area: createSpot;
    color: white;
    border-radius: 25px;
    width: 20em;
    height: 2em;
    justify-content: center;
    align-content: center;
    background-color: #FF385C;
}

.createSpotContainer {
    display: grid;
}


.logoutButton button, .logoutButton button:hover {
    display: grid;
    border:0px;
    position: relative;
    background-color: white;
    font-size: 15px;
    font-weight: bold;
}

